[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Room4/closet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Room4/closet_open.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Room4/closet_closed.png" type="Texture" id=3]
[ext_resource path="res://Sprites/keyhole.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 328.641, 484.983 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.8908, 32.4473 )

[node name="Closet" type="Node2D"]
script = ExtResource( 1 )

[node name="ClosetOpen" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ClosetClosed" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="ClosedTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClosedTrigger"]
position = Vector2( -62, -26 )
shape = SubResource( 1 )

[node name="Keyhole" type="Sprite" parent="."]
position = Vector2( -44.1449, 30.3496 )
scale = Vector2( 0.380757, 0.380757 )
texture = ExtResource( 4 )

[node name="KeyholeTrigger" type="Area2D" parent="Keyhole"]
position = Vector2( 115.94, -79.7086 )
scale = Vector2( 2.62635, 2.62635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keyhole/KeyholeTrigger"]
position = Vector2( -43.8406, 31.8198 )
shape = SubResource( 2 )
[connection signal="input_event" from="ClosedTrigger" to="." method="on_click"]
[connection signal="input_event" from="Keyhole/KeyholeTrigger" to="." method="on_key_click"]
